[package]
name = "p2p-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlp = { version = "0.5.2", features = ["derive"] }
hex = "0.4.3"
tokio = { version = "1.32.0", features = [
    "time",
    "macros",
    "net",
    "rt-multi-thread",
] }
tokio-util = { version = "0.7.8", features = ["codec"] }
bytes = "1.4.0"
rand = "0.8.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
futures = "0.3.28"
thiserror = "1.0.47"
byteorder = "1.4.3"
regex = "1.9.3"
# crypto
secp256k1 = { version = "0.27.0", default-features = false, features = [
    "global-context",
    "rand-std",
    "recovery",
] }
concat-kdf = "0.1.0"
ctr = "0.9.2"
sha2 = "0.10.6"
sha3 = "0.10.5"
aes = "0.8.3"
hmac = "0.12.1"
block-padding = "0.3.3"
cipher = { version = "0.4.3", features = ["block-padding"] }

[dev-dependencies]
hex-literal = "0.4.1"
